pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError6.pkl
local listing1: Listing<Int> = new { 1 }
local listing2: Listing<String> = listing1
local listing3 = (listing2) { "2" }

first = listing3[0]
